Fixed thread view side spacings

--- a/EXTRA.css
+++ b/EXTRA.css
@@ -4661,3 +4661,32 @@ td.visible-print {
     padding-bottom: 4px;
     margin-right: 10px;
 }
+.thread_view .titleBar {
+    padding-left: 15px;
+}
+.thread_view .secondaryContent,
+.thread_view .threadAlerts,
+.thread_view .sharePage {
+    margin: 0 15px !important;
+}
+.thread_view .pageNavLinkGroup {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+.thread_view .message .messageUserInfo {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+.thread_view .messageInfo {
+    margin-right: 15px !important;
+}
+.thread_view .Tinhte_XenTag_TagsInlineEditor {
+    margin: 0 15px;
+    border: 1px solid rgb(223, 213, 213);
+    padding: 5px;
+    border-radius: 5px;
+}
+.thread_view #QuickReply {
+    margin-right: 15px;
+    padding-left: 15px;
+}
